Thu Sep  6 18:53:06 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * tests/run_test.lst:

          Added the SSL_Asynch_Stream_Test and
          Thread_Pool_Reactor_SSL_Test to the list of tests to run.  The
          run_test.pl script now supports log files for test binaries in
          subdirectories.  [Bug 2985]

Thu Sep  6 18:41:36 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * bin/fuzz.pl:

          Nuked trailing whitespace.

        * tests/run_test.pl (check_log):

          Support logs generated by tests in subdirectories, such as tests
          found in the SSL subdirectory.

Thu Sep  6 15:33:15 UTC 2007  Friedhelm Wolf  <fwolf@dre.vanderbilt.edu>

        * docs/ACE-guidelines.html
          Add guidelines about doxygen comments

Thu Sep  6 14:41:50 UTC 2007  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/WIN32_Asynch_IO.cpp (open): Update the win32_proactor_
          pointer so it's in synch after a call to open().  Thanks to
          Erman Balcik <erman dot balcik at siemens dot com> for
          contributing this.

Thu Sep  6 12:12:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/Synch-Benchmarks/run_tests.pl:
          Fixed typo

Thu Sep  6 12:09:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_rel_manpages:
          Added md5sum steps

Thu Sep  6 09:27:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.h:
          Doxyen fix

Thu Sep  6 00:13:48 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * tests/run_test.lst:

          Updated location of Bug_2912_Regression test.

Wed Sep  5 23:40:15 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * tests/Bug_2912_Regression_Test.cpp:
        * tests/tests.mpc:
        * tests/SSL/tests.mpc:

          Moved Bug_2912_Regression test to the SSL subdirectory.  It is
          an SSL related test.
