@@ -1,3 +1,9 @@
+Thu Sep  6 18:28:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/config-win32-borland.h:
+          Make use of the new inline assembly feature of the upcoming CodeGear C++
+          compiler
+
 Thu Sep  6 18:53:06 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>
 
         * tests/run_test.lst:
